个人感觉代码目前为止还算满意

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ hex = "0.4"
 
 # base64
 base64 = "0.12.1" 
+
+hmac = "0.12"   # 或者最新版
+sha2 = "0.10"    # 或者最新版
+
+# 一个帮助生成自定义错误类型的库，简化错误处理
+thiserror = "1.0"
