rsa aes hmac base64 hex 加解密代码这里整理完毕了

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,13 @@ hmac = "0.12"   # 或者最新版
 sha2 = "0.10"    # 或者最新版
 
 # 一个帮助生成自定义错误类型的库，简化错误处理
-thiserror = "1.0"
+thiserror = "2.0.0"
+
+# rsa实现加解密
+rsa = "0.7"
+
+# 使用最新版本，建议在文档中确认当前最新版本
+zeroize = "1.5" 
+
+[dev-dependencies]
+time = "0.1.41"
