--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,3 +63,6 @@ napi = ["neon"]
 [build-dependencies]
 # cbindgen - 用于生成 C 头文件的工具
 cbindgen = "0.24.3"
+
+[target.x86_64-unknown-linux-gnu]
+linker = "x86_64-linux-gnu-gcc"
